<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ielts.vocabulary.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.ielts.vocabulary.ui.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.ielts.vocabulary.ui.review.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.ielts.vocabulary.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ielts.vocabulary.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/testFragment"
        android:name="com.ielts.vocabulary.ui.test.TestFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_test" />

</navigation>